--- a/vignettes/Walkthrough.Rmd
+++ b/vignettes/Walkthrough.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Vignette Title"
-author: "Vignette Author"
+title: "FusionExpressionPlot Walkthrough"
+author: "Stuart R. Jefferys"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{FusionExpressionPlot Walkthrough}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
